<resources>
    <string name="app_name">EasyPhoto</string>
    <string name="ep_main_item_photo_beautify">图片美化</string>
    <string name="ep_main_item_photo_jigsaw">一键拼图</string>
    <string name="ep_main_item_photo_matting">魔法抠图</string>
    <string name="ep_main_item_photo_canvas">简单画布</string>
    <string name="ep_main_item_photo_blank">印象留白</string>
    <string name="ep_main_item_photo_wallpaper">壁纸制作</string>
    <string name="ep_main_item_photo_gif">GIF制作</string>
    <string name="ep_main_open_camera">相机</string>

    <string name="ep_no_permissions">应用需要必要的运行权限</string>
    <string name="ep_settings">设置</string>
    <string name="ep_help">帮助</string>
    <string name="ep_string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="ep_cancel">取消</string>
</resources>
