<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yequan.easyphoto.MainActivity">

    <ImageView
        android:id="@+id/ep_mainactivity_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <ImageView
        android:id="@+id/ep_main_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:src="@mipmap/ep_main_setting" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="60dp"
        android:orientation="vertical">

        <HorizontalScrollView
            android:id="@+id/ep_main_scrollview_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/ep_rl_beautify"
                    android:layout_width="@dimen/ep_main_item_width"
                    android:layout_height="@dimen/ep_main_item_height"
                    android:layout_margin="5dp">

                    <ImageView
                        style="@style/itemImageViewStyle"
                        android:src="@mipmap/ep_main_item_icon_beautify" />

                    <TextView
                        style="@style/itemTextViewStyle"
                        android:text="@string/ep_main_item_photo_beautify" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/ep_rl_jigsaw"
                    android:layout_width="@dimen/ep_main_item_width"
                    android:layout_height="@dimen/ep_main_item_height"
                    android:layout_margin="5dp">

                    <ImageView
                        style="@style/itemImageViewStyle"
                        android:src="@mipmap/ep_main_item_icon_jigsaw" />

                    <TextView
                        style="@style/itemTextViewStyle"
                        android:text="@string/ep_main_item_photo_jigsaw" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/ep_rl_matting"
                    android:layout_width="@dimen/ep_main_item_width"
                    android:layout_height="@dimen/ep_main_item_height"
                    android:layout_margin="5dp">

                    <ImageView
                        style="@style/itemImageViewStyle"
                        android:src="@mipmap/ep_main_item_icon_matting" />

                    <TextView
                        style="@style/itemTextViewStyle"
                        android:text="@string/ep_main_item_photo_matting" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/ep_rl_canvas"
                    android:layout_width="@dimen/ep_main_item_width"
                    android:layout_height="@dimen/ep_main_item_height"
                    android:layout_margin="5dp">

                    <ImageView
                        style="@style/itemImageViewStyle"
                        android:src="@mipmap/ep_main_item_icon_canvas" />

                    <TextView
                        style="@style/itemTextViewStyle"
                        android:text="@string/ep_main_item_photo_canvas" />
                </RelativeLayout>
            </LinearLayout>
        </HorizontalScrollView>

        <HorizontalScrollView
            android:id="@+id/ep_main_scrollview_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/ep_rl_blank"
                    android:layout_width="@dimen/ep_main_item_width"
                    android:layout_height="@dimen/ep_main_item_height"
                    android:layout_margin="5dp">

                    <ImageView
                        style="@style/itemImageViewStyle"
                        android:src="@mipmap/ep_main_item_icon_blank" />

                    <TextView
                        style="@style/itemTextViewStyle"
                        android:text="@string/ep_main_item_photo_blank" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/ep_rl_wallpaper"
                    android:layout_width="@dimen/ep_main_item_width"
                    android:layout_height="@dimen/ep_main_item_height"
                    android:layout_margin="5dp">

                    <ImageView
                        style="@style/itemImageViewStyle"
                        android:src="@mipmap/ep_main_item_icon_wallpaper" />

                    <TextView
                        style="@style/itemTextViewStyle"
                        android:text="@string/ep_main_item_photo_wallpaper" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/ep_rl_gif"
                    android:layout_width="@dimen/ep_main_item_width"
                    android:layout_height="@dimen/ep_main_item_height"
                    android:layout_margin="5dp">

                    <ImageView
                        style="@style/itemImageViewStyle"
                        android:src="@mipmap/ep_main_item_icon_gif" />

                    <TextView
                        style="@style/itemTextViewStyle"
                        android:text="@string/ep_main_item_photo_gif" />
                </RelativeLayout>

            </LinearLayout>
        </HorizontalScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ep_main_item_ll_openCamera"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="45dp"
        android:background="@drawable/ep_shape_main_camera_button"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ep_main_item_icon_camera" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ep_main_open_camera"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

</FrameLayout>
